<resources>
    <string name="app_name">LOUD</string>
    <string name="title_activity_game_screen">GameScreenActivity</string>
    <string name="home">Home</string>
    <string name="forest">Forest</string>
    <string name="shop">Shop</string>
    <string name="pylons_central">Pylons</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="home_desc">You are at home. It’s safe here. No monsters. Warm blankets.\nThere are other places if you want to do something more exciting.\nRuin something’s day by going to the forest to hunt it\nGo to the shop to buy, sell or upgrade items</string>
    <string name="home_desc_without_pylon">Hmm, you are fresh out of pylons.\nNo pylons, no LOUD. It\'s a sad reality.\nYou can either buy some pylons or sell some stuff on the market.</string>
    <string name="home_desc_without_character">"Welcome to Legend of the Undead Dragon!\n \nTo play LOUD, you need at least one character.\nYou can manifest a fresh soul at Pylons Central\nor you can head to the market where other players may have one on offer."</string>
    <string name="select_active_character">Select active character</string>
    <string name="select_active_weapon">Select active weapon</string>
    <string name="restore_character_health">Restore character health</string>
    <string name="update_character_name">Change your character\'s name</string>
    <string name="send_items">Send Items</string>
    <string name="rabbit">Rabbit</string>
    <string name="goblin">Goblin</string>
    <string name="wolf">Wolf </string>
    <string name="troll">Troll</string>
    <string name="giant">Giant</string>
    <string name="fire_giant">Fire Giant</string>
    <string name="ice_giant">Ice Giant</string>
    <string name="acid_giant">Acid Giant</string>
    <string name="fire_dragon">Fire Dragon</string>
    <string name="ice_dragon">Ice Dragon</string>
    <string name="acid_dragon">Acid Dragon</string>
    <string name="undead_dragon">Undead Dragon</string>
    <string name="buy_items">Buy Items</string>
    <string name="sell_items">Sell Items</string>
    <string name="upgrade_items">Upgrade Items</string>
    <string name="buy_characters">Select Characters</string>
    <string name="purchase_pylon">Purchase Pylons</string>
    <string name="buy_5000_with_100_pylons">Buy 💰5000 with 100 pylons</string>
    <string name="you_cant_go_to_forest_without_character">You can\'t go to forest without character</string>
    <string name="pylons_central_desc">Turn Pylons into useful things. Like pretend gold. Yes! This is a good use of your valuable Pylons.</string>
    <string name="shop_desc">It’s a blacksmith’s store.\nThe blacksmith sells things, buys things, and mends things.\nSometimes he regrets his choices in life.</string>
    <string name="forest_home_desc">You are in the forest. Do you take the path to the right or the left?</string>
    <string name="forest_basic_desc">Oh! Here are the dark and spooky woods.\nSomehow everything lives here at the same time. Don’t think about it. Just choose something to pick a fight with.</string>
    <string name="forest_special_desc">You have made it to the secret forest. These fights will require you to use pylons to activate. In return you will master your skills faster.</string>
    <string name="forest_basic">Go Right</string>
    <string name="forest_special">Go Left</string>
    <string name="inventory_desc">Your inventory.\nYou can select active character and active weapon</string>
    <string name="gold_icon">💰</string>
    <string name="pylon_icon">🔷</string>
    <string name="weapon_icon">🗡️</string>
    <string name="character_icon">🦘</string>
    <string name="health_icon">🔶</string>
    <string name="lock_icon">🔒</string>
    <string name="login_desc">Who challenges me?</string>
    <string name="login_button_text">Continue</string>
    <string name="login_no_username_text">Enter valid username</string>
    <string name="buy_character_desc">Summon a hero. We got a whole lot of chosen ones back here.</string>
    <string name="buy_character_prompt">Pick %1$s as your new companion?</string>
    <string name="buy_character_complete">%1$s and you have become companions!</string>
    <string name="fight">Fight</string>
    <string name="you_have_bought_from_shop">You have bought %1$s from shop</string>
    <string name="you_did_fight_with_and_earned">You brave hero you! You defeated the %1$s and earned %2$d 💰</string>
    <string name="you_have_lost_your_weapon">You have lost your weapon accidentally</string>
    <string name="you_got_bonus_item">You got bonus item called %1$s</string>
    <string name="you_were_killed">Well that could have gone better. %1$s is dead. Killed by the %2$s. Go back home and pick a new character unless you’re a huge baby.</string>
    <string name="you_dont_have_enough_gold_to_upgrade">You don\'t have enough gold to upgrade %1$s</string>
    <string name="you_have_upgraded_item">You have upgraded %1$s to get better hunt result</string>
    <string name="you_sold_item_for_gold">You sold %1$s for %2$d gold</string>
    <string name="you_dont_have_enough_gold">You don\'t have enough gold</string>
    <string name="you_dont_have_enough_resources">You don\'t have enough resources</string>
    <string name="setting_switch_account">Switch Account</string>
    <string name="setting_get_dev_items">Get dev test items</string>
    <string name="setting_get_pylons">Get pylons</string>
    <string name="rabbit_icon"></string>
    <string name="goblin_icon">👺</string>
    <string name="troll_icon">👻</string>
    <string name="wolf_icon">🐺</string>
    <string name="giant_icon">🗿</string>
    <string name="fire_dragon_icon">🦐</string>
    <string name="ice_dragon_icon">🦈</string>
    <string name="acid_dragon_icon">🐊</string>
    <string name="undead_dragon_icon">🐉</string>
    <string name="fire_icon">🔥</string>
    <string name="ice_icon">🌊</string>
    <string name="acid_icon">🥗</string>
    <string name="fight_rabbit_description">🐇\nNot known for putting up much of a fight.\nAlso typically not very rich. Fuzziness factor, off the charts!\nSome rabbits are really super-mean though so be careful!.</string>
    <string name="fight_goblin_description">👺\nSneaky but weak. You can take him.\nGoblins don\'t have much money but they have a high chance to drop their ear.</string>
    <string name="fight_wolf_description">🐺\nAroooo! Not as fuzzy as the rabbit, better at biting things too.\nWolves don\'t have any money so they don\'t have gold.\nBut they do have wolf tails. Those might be useful, even if you aren\'t a wolf</string>
    <string name="fight_troll_description">👻\nBig, smelly, and fond of ‘yo mama’ jokes. Don’t say we didn’t warn you.\nTrolls don\'t really drop their toes but they might have a lot of gold because they eat unlucky travellers</string>
    <string name="fight_giant_description">🗿\nBigger than the troll, smellier than the troll. Less of a sense of humour than the troll.</string>
    <string name="fight_fire_giant_description">🗿\nBigger than the troll, smellier than the troll. Less of a sense of humour than the troll. There is a fire aura around this giant.</string>
    <string name="fight_ice_giant_description">🗿\nBigger than the troll, smellier than the troll. Less of a sense of humour than the troll. There is a icy aura around this giant.</string>
    <string name="fight_acid_giant_description">🗿\nBigger than the troll, smellier than the troll. Less of a sense of humour than the troll. There is a acidic aura around this giant.</string>
    <string name="fight_fire_dragon_description">🦐\nThe classic fire-breathing dragon. You know the drill. Get at it!</string>
    <string name="fight_ice_dragon_description">🦈\nIt’s blue, it’s cold, and it’s not your friend.</string>
    <string name="fight_acid_dragon_description">🐊\nLost its way at a music festival. Colours confuse it. Will melt you and everything you hold dear in a heartbeat.</string>
    <string name="fight_undead_dragon_description">🐉\nIt looks grumpy but that’s just resting lich face.</string>
    <string name="shop_buy_description">Swords are big and clever. Big. And. Clever.</string>
    <string name="shop_sell_description">Sell some stuff. Make money, get britches. We’re pretty sure that’s how it works.</string>
    <string name="shop_no_sell_description">No items to sell. Go fight to get some.</string>
    <string name="shop_upgrade_description">Two words. Up. Grade. Make your stuff more awesome.</string>
    <string name="shop_no_upgrade_description">No items to upgrade. Go buy some!</string>
    <string name="loading_account">%1$s eh! Good luck. </string>
    <string name="loading_buy_character">Finalizing documents for %1$s and you</string>
    <string name="loading_fight">You are bravely laying into the %1$s with your %2$s level %3$d. Exciting!</string>
    <string name="loading_buy_shop_item">You are buying %1$s at the shop</string>
    <string name="loading_sell_shop_item">You are selling %1$s for %2$s</string>
    <string name="loading_upgrade_shop_item">You are upgrading %1$s</string>
    <string name="loading_buy_gold_with_pylon">Spending %1$d pylons for %2$d gold</string>
    <string name="loading_get_dev_items">Getting dev test items from pylon</string>
    <string name="loading_get_pylons">Getting pylons for you</string>
    <string name="purchase_complete">Purchase Complete</string>
    <string name="bought_gold_with_pylons">Bought %1$d gold with %2$d pylons</string>
    <string name="got_dev_items">Finished getting developer test items:\n\nWolf tail\nTroll toes\nGoblin ear\nFire scale\nIcy shards\nPosion claws\nRuppell\'s Fox\nGentoo penguin\nColorado River toad</string>
    <string name="got_pylons">Got you some pylons!</string>
    <string name="not_enough_pylons">Not enough pylons</string>
    <string name="confirm_buy_gold_with_pylons">Are you sure you want to spend %1$d pylons for %2$d gold?</string>
    <string name="fight_giant_special">You got %1$s (special) from the giant!!\nYou can now fight with %2$s with this character!</string>
    <string name="trade">Trade</string>
    <string name="create_trade">Create Trade</string>
    <string name="my_trades">My Trades</string>
    <string name="market_trades">Market</string>
    <string name="trade_buy_desc">What do you want?</string>
    <string name="trade_sell_desc">What do you want to offer?</string>
    <string name="trade_pylon">Pylon 🔷️</string>
    <string name="trade_gold">Gold 💰</string>
    <string name="trade_character">Character 🦘</string>
    <string name="trade_item">Item 🗡️</string>
    <string name="trade_create_loading">You are waiting to create trade request</string>
    <string name="trade_create_complete">Successfully created trade request</string>
    <string name="trade_create_error">There was an error creating trade</string>
    <string name="trade_fulfill">Are you sure you want to trade?</string>
    <string name="trade_fulfill_loading">You are waiting to complete trade</string>
    <string name="trade_fulfill_complete">Successfully completed trade!</string>
    <string name="trade_cancel">Are you sure you want to cancel trade?</string>
    <string name="trade_cancel_loading">You are waiting to cancel one of your trades</string>
    <string name="trade_cancel_complete">Successfully cancelled trade request</string>
    <string name="trade_gold_buy">How many gold do you want?</string>
    <string name="trade_gold_sell">How many gold can you give?</string>
    <string name="trade_pylon_buy">How many pylons to you want?\n(minimum %1$d)</string>
    <string name="level">Level</string>
    <string name="attack">Attack</string>
    <string name="xp">XP</string>
    <string name="no_active_character">No active character, tap here for inventory</string>
    <string name="no_active_weapon">No active weapon, tap here for inventory</string>
</resources>