<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".fragments.screens.pyloncentral.PylonCentralHomeFragment">

    <TextView
        android:id="@+id/text_pylon_central"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/pylons_central_desc" />

    <Button
        android:id="@+id/button_buy_5000_with_100_pylons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_5000_with_100_pylons" />

    <Button
        android:id="@+id/button_trade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade" />

    <Button
        android:id="@+id/button_update_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_character_name" />

    <Button
        android:id="@+id/button_send_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_items" />

</LinearLayout>