<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/trade_buy_desc"
        android:textAppearance="?attr/textAppearanceListItem" />

    <Button
        android:id="@+id/button_pylons_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_pylon" />

    <Button
        android:id="@+id/button_gold_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_gold" />

    <Button
        android:id="@+id/button_character_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_character" />

    <Button
        android:id="@+id/button_item_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trade_item" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBorder" />

    <fragment
        android:id="@+id/fragment_item_buy"
        android:name="com.pylons.loud.fragments.lists.itemspec.ItemSpecFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
