<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".fragments.screens.shop.ShopHomeFragment">

    <TextView
        android:id="@+id/text_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:text="@string/shop_desc" />

    <Button
        android:id="@+id/button_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_items" />

    <Button
        android:id="@+id/button_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell_items" />

    <Button
        android:id="@+id/button_upgrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_items" />
</LinearLayout>