<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".fragments.ui.BottomNavigationFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp"
        android:text="@string/home"
        android:textColor="@color/state_text" />

    <TextView
        android:id="@+id/text_forest"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp"
        android:text="@string/forest"
        android:textColor="@color/state_text" />

    <TextView
        android:id="@+id/text_shop"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp"
        android:text="@string/shop"
        android:textColor="@color/state_text" />

    <TextView
        android:id="@+id/text_pylons_central"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp"
        android:text="@string/pylons_central"
        android:textColor="@color/state_text" />

    <TextView
        android:id="@+id/text_friends"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp"
        android:text="@string/friends"
        android:textColor="@color/state_text" />

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp"
        android:text="@string/settings"
        android:textColor="@color/state_text" />
</LinearLayout>