<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".fragments.screens.setting.SettingsScreenFragment">

    <Button
        android:id="@+id/button_switch_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_switch_account" />

    <Button
        android:id="@+id/button_get_dev_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_get_dev_items" />

    <Button
        android:id="@+id/button_get_pylons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_get_pylons" />

</LinearLayout>
