<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_border"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.ui.PlayerStatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_player_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/layout_gold_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_gold_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_label_margin"
                android:text="@string/gold_icon" />

            <TextView
                android:id="@+id/text_player_gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pylon_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_pylon_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_label_margin"
                android:text="@string/pylon_icon" />

            <TextView
                android:id="@+id/text_player_pylon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_active_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_character_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:text="@string/character_icon" />

            <LinearLayout
                android:id="@+id/layout_active_character_badges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_active_character_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_active_character_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_label_margin"
                android:text="@string/level" />

            <TextView
                android:id="@+id/text_active_character_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_label_margin"
                android:text="@string/xp" />

            <TextView
                android:id="@+id/text_active_character_xp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_no_active_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_active_character"
            android:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_active_weapon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_weapon_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_label_margin"
            android:text="@string/weapon_icon" />

        <LinearLayout
            android:id="@+id/layout_active_weapon_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_active_weapon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_label_margin"
                android:text="@string/level" />

            <TextView
                android:id="@+id/text_active_weapon_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_label_margin"
                android:text="@string/attack" />

            <TextView
                android:id="@+id/text_active_weapon_attack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_no_active_weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_active_weapon"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
