<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".fragments.screens.pyloncentral.PylonCentralTradeHomeFragment">

    <Button
        android:id="@+id/button_create_trade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_trade" />

    <Button
        android:id="@+id/button_my_trades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_trades"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/market_trades"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin"
        android:background="@color/colorBorder" />

    <TextView
        android:id="@+id/text_trade_situation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin" />

    <fragment
        android:id="@+id/fragment_trade_list"
        android:name="com.pylons.loud.fragments.lists.trade.TradeFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>